# nuscenes_to_ros2bag

./: CMakeLists.txt  ReadMe.md  default.rviz  package.xml
config/: qos_override_offline.yaml
include/nuscenes_to_ros2bag/: message_converter.hpp  metadata_reader.hpp  metadata_types.hpp  nuscenes_to_ros2bag.hpp  scene_converter.hpp
launch/: nuscenes_to_ros2bag_launch.py  nuscenes_to_ros2bag_play_launch.py
param/: nuscenes_to_ros2bag.yaml
src/: bag_writer.cpp  message_converter.cpp  metadata_reader.cpp  nuscenes_to_ros2bag.cpp  nuscenes_to_ros2bag_node.cpp  scene_converter.cpp
